--- a/index.html
+++ b/index.html
@@ -1,17 +1,9 @@
-<html>
-    <head>
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Roboto+Mono:ital,wght@0,300;0,400;1,300;1,400&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="./styles.css" />
-    </head>
-    <body>
-        <div class="header">
-            <div class="header-heading">Maruthi Mohan</div>
-            <div class="header-work">Work</div>
-            <div class="header-blog">Blog</div>
-        </div>
-        <div class="content">
+---
+# Feel free to add content and custom Front Matter to this file.
+# To modify the layout, see https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 
-        </div>
-    </body>
-</html>
+layout: default
+---
+<div>
+    Keep watching this space for updates!
+</div>
