Added styles and structure

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 
 layout: default
 ---
-<div>
-    Keep watching this space for updates!
+<div class="home">
+    <div class="title">
+        Hi there!
+    </div>
+    <div class="information">
+        Maruthi, a Software Engineer mainly focused on front-end technologies like Html, CSS and JavaScript (and of course the abstractions derived from them like Angular and React) and backend technologies, C# and Python (Work in progress). Also, all things Salesforce is one of my areas of expertise.
+    </div>
 </div>
