Adding initial blogging mechanism

--- a/about.html
+++ b/about.html
@@ -4,3 +4,24 @@ title: About
 permalink: /about/
 ---
 
+<div class="about">
+    <div class="title">A little more about me...</div>
+    <ul>
+        <li>🔭 I’m currently working on</li>
+        <ul>
+            <li>Custom Applications using SFDC</li>
+            <li>Frontend Apps using Angular</li>
+            <li>Web Apps in .NET core with C#</li>
+            <li>Experimenting with React, Next, Gatsby and all things React</li>
+        </ul>
+        <li>🌱 I’m currently learning</li>
+        <ul>
+            <li>JavaScript (I believe one can never learn enough JavaScript)</li>
+            <li>Python (Web Apps)</li>
+        </ul>
+    </ul>
+
+    <div class="ask-me-about">💬 Ask me about - Salesforce.com, Angular, React, C#, Python (Even though I might not know the answer, I would definitely try to get you one learning along the way)</div>
+    <div class="reach-me">📫 How to reach me: Say Hello on Twitter</div>
+    <div class="fun-fact">⚡ Fun fact: I like listening to Movies!!</li>
+</div>
